wtf can't add parameter named endIndex

--- a/DodgeOrNot/DodgeOrNot.csproj
+++ b/DodgeOrNot/DodgeOrNot.csproj
@@ -123,6 +123,11 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201605041230202_InitialSetup.cs" />
+    <Compile Include="Migrations\201605041230202_InitialSetup.Designer.cs">
+      <DependentUpon>201605041230202_InitialSetup.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\DodgeOrNotContext.cs" />
     <Compile Include="Models\Global.cs" />
     <Compile Include="Models\JSONObject.cs" />
@@ -179,6 +184,11 @@
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201605041230202_InitialSetup.resx">
+      <DependentUpon>201605041230202_InitialSetup.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
